# channels

./: CMakeLists.txt  channels.hpp
docs/: Doxyfile.in  mainpage.md
examples/: CMakeLists.txt  pause.cpp  threadpool.cpp
tests/: CMakeLists.txt  integration.cpp  unit.cpp
